[Chromium] Inconsistent initialization of CCSettings in WebLayerTreeView. https://bugs.webkit.org/show_bug.cgi?id=76927

Patch by David Reveman <reveman@chromium.org> on 2012-02-14
Reviewed by James Robinson.

Remove unnecessary initialization and include maxPartialTextureUpdates
in FIXME comment.

* src/WebLayerTreeView.cpp:
(WebKit::WebLayerTreeView::Settings::operator CCSettings):

Canonical link: https://commits.webkit.org/95542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107695 268f45cc-cd09-0410-ab3c-d52691b4dbfc